# file_upload_backend

./: Cargo.toml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
assets/: index-C7nUSR1v.js  index-HhKR3RAZ.js  index-wPLCQZhP.css
src/: App.tsx  file_requests.rs  main.rs  upload_file.rs  utils.tsx
src/pages/: Home.tsx  SexyPage.tsx
