[package]
name = "file_upload"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.5"
actix-multipart = "0.6.1"
actix-web = "4.6.0"
tokio = "1.37.0"
futures-util = "0.3.30"
serde = { version = "1.0.202", features = ["derive"] }
log = "0.4.21"
rand = "0.8.5"
serde_json = "1.0.140"
actix-cors = "0.7.0"
